taxonomy dev in progress

--- a/resources/css/filament/admin/theme.css
+++ b/resources/css/filament/admin/theme.css
@@ -3,5 +3,8 @@
 @source '../../../../app/Filament/**/*';
 @source '../../../../resources/views/filament/**/*';
 
-/* Vustom Auth UI Enhancer */
+/* Custom Auth UI Enhancer */
 @source '../../../../vendor/diogogpinto/filament-auth-ui-enhancer/resources/**/*.blade.php';
+
+/* Spotlight */
+@source '../../../../vendor/wire-elements/**/*.blade.php';
